tests/fail/or_operator_non_valued_operands.tig
(
    if 1 | () then ();
    if () | 1 then ();
    if (() | ()) then ()
)
