tests/fail/or_operator_non_valued_operands.err
Semantic Error: Invalid use of binary logical operator with a non-valued right expression at line 2.
Semantic Error: Invalid use of binary logical operator with a non-valued left expression at line 3.
Semantic Error: Invalid use of binary logical operator with a non-valued right expression at line 4.
Semantic Error: Invalid use of binary logical operator with a non-valued left expression at line 4.
